# rest-framework

./: .gitignore  Node.txt  pyproject.toml
topic_wise/01_create_python_api_client/: Note.txt
topic_wise/02_Create_First_API_View/: Note.txt
topic_wise/04_Model_Instance_as_API_Response/: Note.txt
topic_wise/05_Model_Instance_to_Dictionary/: Note.txt
topic_wise/06_Views_Using_DRF/: Note.txt
topic_wise/07_DRF_Model_Serializers/: Note.txt
topic_wise/08_DRF_POST_Method/: Note.txt
topic_wise/09_GenericAPIView/: Note.txt
topic_wise/10_Function_Based_Create_Retrieve_or_List_View/: Note.txt
topic_wise/11_Mixins_and_GenericAPIView/: Note.txt
topic_wise/12_Session_Auth_and_Permissions/: Note.txt
topic_wise/13_DjangoModelPermissions/: Note.txt
topic_wise/15_Token_Authentication/: Note.txt
topic_wise/16_Default_DRF_Settings/: Note.txt
topic_wise/18_ViewSets_and_Routers/: Note.txt
topic_wise/20_Model_Serializer_Create_and_Update_Methods/: Note.txt
topic_wise/21_Custom_Validation_with_Serializers/: Note.txt
topic_wise/23_Related_Fields_and_FK_Serializer/: Note.txt
topic_wise/25_Django_Based_Search_for_Product/: Note.txt
topic_wise/26_Search_Engine_on_Algolia/: Note.txt
topic_wise1/01_create_python_api_client/: Note.txt
topic_wise1/03_Echo_GET_Data/: Note.txt
topic_wise1/05_Model_Instance_to_Dictionary/: Note.txt
topic_wise1/13_DjangoModelPermissions/: Note.txt
topic_wise1/14_Custom_Permissions/: Note.txt
topic_wise1/16_Default_DRF_Settings/: Note.txt
topic_wise1/17_Mixins_for_Permissions/: Note.txt
topic_wise1/24_Pagination/: Note.txt
(+253 files in other folders)
